fix(docs,core): linklist align

--- a/src/scss/custom/_linklist.scss
+++ b/src/scss/custom/_linklist.scss
@@ -166,8 +166,6 @@
           &.left-icon {
             position: relative;
             display: flex;
-            padding-left: 0;
-            flex-wrap: wrap;
             span {
               margin-top: $v-gap * 0.5;
             }
